<resources>
    <string name="app_name">Memory Book</string>
    <string name="slika">slika</string>
    <string name="description">Description:</string>

    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="see_memories_on_map">See memories on map</string>
    <string name="title">Title</string>
    <string name="one_word_is_enough">One word is enough</string>
    <string name="take_picture">Take Picture</string>
    <string name="save">Save</string>
    <string name="why_is_it_special">Why is it special?</string>

</resources>

